--- a/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -3,34 +3,48 @@
     left: 0;
     right: 0;
     bottom: 0;
+    position:relative;
 }
 
 .project-dashboard-sidebar {
-    background-color: #f2f2f2;
+    background-color: #fff;
     padding: 20px;
-    /* margin-left: 60px; */
-    border-right: 1px solid grey;
-    resize: horizontal;
-    overflow: auto;
+    border-right: 1px solid rgb(235, 228, 228);
     height: 100vh;
-    width: 20vw;
+    width: 15vw;
+    position: fixed;
+   
+}
+.project-dashboard-content {
+    margin-left: 20vw; 
+    padding-left: 10px;
 }
 
 .project-dashboard-sidebar ul {
     list-style-type: none;
-    padding: 0;
-    margin: 0;
 }
 
 .project-dashboard-sidebar li {
-    cursor: pointer;
+   
     display: flex;
     align-items: center;
     gap: 8px;
-    padding: 10px 0;
-    padding-left: 5px;
+    padding: 10px 0px;
+    padding-left: 10px;
+    color: #000;
+    transition: background-color 0.3s ease;
 }
 
+  .project-dashboard-sidebar li:hover {
+    background-color: rgb(247, 244, 244); 
+    line-height: 1;
+  }
+
+  .project-dashboard-sidebar li.selected {
+    color: #fff; 
+    background-color: rgb(104, 200, 238); 
+    border-radius: 5px; 
+  }
 .requirements-list {
     overflow: hidden;
     transition: max-height 0.5s ease-in-out;
@@ -61,7 +75,7 @@
 }
 
 .selected-req-set {
-    background-color: #a5c0dd;
+    background-color: #a5c0dd; 
     padding: 0;
     border-radius: 5px;
 }
@@ -77,7 +91,7 @@
     color: #fff;
     padding: 10px;
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 5px;
     border-radius: 5px;
 }
 
