--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -16,6 +16,9 @@
     flex-wrap: auto;
     padding: 0rem 5rem 5rem;
 }
+.projects-section.visible{
+    width: 80vw;
+}
 .projects-header{
     height: 5rem;
     display: flex;
@@ -38,7 +41,6 @@
     font-size: 0.8rem;
 }
 .create-card{
-    border-radius: 10px;
     cursor: pointer;
     transition: all 0.5s ease;
     width: 9rem;
@@ -68,11 +70,11 @@
     margin-top: 10px;
 }
 .projects-card{
-    border-radius: 10px;
     cursor: pointer;
     transition: all 0.5s ease;
     width: 9rem;
-    height: 9rem;
+    height: 10rem;
+    overflow: hidden;
     
 }
 .projects-card:hover{
@@ -85,4 +87,81 @@
 }
 .project-description{
     font-size: 0.8rem;
+}
+.menu-handler{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 5rem;
+    width: 10rem;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+
+.project-table-container {
+    margin-top: 30px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 5%;
+    right: -500px;
+    height: 100vh;
+    width: 25vw;
+    transition: right 1s ease; 
+    background-color: white;
+
+  }
+
+  .project-table-cancel{
+    margin: 1rem;
+    cursor: pointer;
+  }
+  
+  .project-table {
+
+    border-collapse: collapse;
+    width: 25vw;
+  }
+  
+  .project-table th {
+    padding: 12px 16px;
+    text-align: left;
+    background-color: #f0f0f0;
+  }
+  
+  .project-table td {
+    padding: 12px 16px;
+    text-align: left;
+  }
+  
+  /* .project-table tr:nth-child(odd) {
+    background-color: #f9f9f9;
+  }
+  
+  .project-table tr:nth-child(even) {
+    background-color: #ffffff;
+  }
+   */
+
+
+  .project-table-container.visible{
+    right:0;
+}
+
+.project-table-header{
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.project-table-header>h1{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+.project-table-button{
+    display: flex;
+    justify-content: center;
 }
