--- a/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
+++ b/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
@@ -1,6 +1,31 @@
 .requirementSetForm {
-    padding: '20px';
-    background-color: '#f0f0f0';
-    border-radius: '8px';
-    box-shadow: '0 2px 4px rgba(0, 0, 0, 0.1)';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.buttons-requirementSetForm {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: centers;
+}
+.reqCreate .reqCancel {
+    padding: 10px;
+    margin: 10px;
+}
+.reqCancel {
+    background-color: red;
+    padding: 10px;
+    margin: 15px;
+    border-radius: 4px;
+    font-weight: 600;
+    color: white;
+}
+.reqCreate {
+    background-color: blue;
+    padding: 10px;
+    margin: 15px;
+    border-radius: 4px;
+    font-weight: 500;
+    color: white;
 }
