--- a/src/pages/ProjectDashboard/Requirements/Requirements.css
+++ b/src/pages/ProjectDashboard/Requirements/Requirements.css
@@ -1,5 +1,7 @@
 .message {
     display: flex;
     justify-content: center;
-    align-self: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
 }
