--- a/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
+++ b/src/pages/ProjectDashboard/Requirements/RequirementSetFrom.css
@@ -18,14 +18,34 @@
     padding: 10px;
     margin: 15px;
     border-radius: 4px;
-    font-weight: 600;
+    font-weight: 500;
     color: white;
 }
 .reqCreate {
-    background-color: blue;
+    background-color: #007bff;
     padding: 10px;
     margin: 15px;
     border-radius: 4px;
     font-weight: 500;
     color: white;
+}
+.blur-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(87, 86, 86, 0.7);
+    backdrop-filter: blur(5px);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.requirementsetform {
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
