--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,34 +1,33 @@
-.project-title>b{
+.project-title > b {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    color: rgb(0,48,89);
+    color: rgb(0, 48, 89);
     margin-left: 2rem;
     height: 3rem;
     font-size: 1.25rem;
     display: flex;
     align-items: center;
 }
-.projects-section{
+.projects-section {
     width: 100vw;
     display: grid;
-    grid-template-columns: repeat(auto-fill,10rem);
+    grid-template-columns: repeat(auto-fill, 10rem);
     column-gap: 20px;
     row-gap: 50px;
     flex-wrap: auto;
     padding: 0rem 5rem 5rem;
 }
-.projects-section.visible{
+.projects-section.visible {
     width: 80vw;
 }
-.projects-header{
+.projects-header {
     height: 5rem;
     display: flex;
     align-items: center;
     font-weight: 700;
     font-size: 1.2rem;
     padding-left: 5rem;
-    
 }
-.project-tagline{
+.project-tagline {
     padding-left: 2rem;
     background-color: rgb(53, 118, 186);
     height: 1.6rem;
@@ -36,32 +35,32 @@
     align-items: center;
     justify-content: flex-start;
 }
-.project-tagline>p{
+.project-tagline > p {
     color: white;
     font-size: 0.8rem;
 }
-.create-card{
+.create-card {
     cursor: pointer;
     transition: all 0.5s ease;
     width: 9rem;
     height: 9rem;
 }
-.create-card:hover{
+.create-card:hover {
     transform: scale(1.2);
 }
-.image-pic{
+.image-pic {
     width: 8rem;
     height: 6rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(239,245,254);
+    background-color: rgb(239, 245, 254);
     border-radius: 10px;
 }
-.createProject-btn{
+.createProject-btn {
     width: 8rem;
     height: 2.3rem;
-    background-color:rgb(53, 118, 186);
+    background-color: rgb(53, 118, 186);
     border-radius: 10px;
     font-weight: bold;
     font-style: normal;
@@ -69,26 +68,25 @@
     color: white;
     margin-top: 10px;
 }
-.projects-card{
+.projects-card {
     cursor: pointer;
     transition: all 0.5s ease;
     width: 9rem;
     height: 10rem;
     overflow: hidden;
-    
 }
-.projects-card:hover{
+.projects-card:hover {
     transform: scale(1.2);
 }
-.project-description>b{
+.project-description > b {
     margin-top: 10px;
     font-size: 0.8rem;
     display: block;
 }
-.project-description{
+.project-description {
     font-size: 0.8rem;
 }
-.menu-handler{
+.menu-handler {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -99,7 +97,6 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-
 .project-table-container {
     margin-top: 30px;
     border-radius: 5px;
@@ -109,34 +106,32 @@
     right: -500px;
     height: 100vh;
     width: 25vw;
-    transition: right 1s ease; 
+    transition: right 1s ease;
     background-color: white;
+}
 
-  }
-
-  .project-table-cancel{
+.project-table-cancel {
     margin: 1rem;
     cursor: pointer;
-  }
-  
-  .project-table {
+}
 
+.project-table {
     border-collapse: collapse;
     width: 25vw;
-  }
-  
-  .project-table th {
+}
+
+.project-table th {
     padding: 12px 16px;
     text-align: left;
     background-color: #f0f0f0;
-  }
-  
-  .project-table td {
+}
+
+.project-table td {
     padding: 12px 16px;
     text-align: left;
-  }
-  
-  /* .project-table tr:nth-child(odd) {
+}
+
+/* .project-table tr:nth-child(odd) {
     background-color: #f9f9f9;
   }
   
@@ -145,23 +140,22 @@
   }
    */
 
-
-  .project-table-container.visible{
-    right:0;
+.project-table-container.visible {
+    right: 0;
 }
 
-.project-table-header{
+.project-table-header {
     display: flex;
     justify-content: center;
     margin: 1rem;
 }
 
-.project-table-header>h1{
+.project-table-header > h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
 }
 
-.project-table-button{
+.project-table-button {
     display: flex;
     justify-content: center;
 }
