--- a/src/pages/ProjectDashboard/Requirements/RequirementForm.css
+++ b/src/pages/ProjectDashboard/Requirements/RequirementForm.css
@@ -3,21 +3,45 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-}
-
-.heading {
+  }
+  
+  div.req-form-container > div{
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 90px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .heading {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.heading > h2 {
+  }
+  
+  .heading > h2 {
     font-weight: bold;
-    font-size: 18px;
-}
-.req-item {
-    margin: 10px;
-}
-.req-submit {
+    font-size: 24px;
+  }
+  
+  .req-item {
+    margin: 20px;
+    width: 35vw;
+    margin-right: 8px; 
+  }
+  
+  .req-submit {
     display: flex;
     justify-content: space-between;
-}
+    margin-top: 20px;
+    flex-wrap: wrap; 
+    margin-left: 90px;
+    margin-right: 90px;
+  }
+  
+  .req-submit > button {
+    width: 40%; 
+  }
+ 
