--- a/src/pages/ProjectDashboard/TestSet/TestSetForm.css
+++ b/src/pages/ProjectDashboard/TestSet/TestSetForm.css
@@ -3,21 +3,44 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-}
+  }
+  
+  div.test-form-container > div{
+    max-width: 600px;
+    width: 100%;
+    padding: 20px;
+    background-color: white;
+    border-radius: 8px;
+    margin-bottom: 90px;
 
-.heading {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
+  
+  .heading {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.heading > h2 {
+  }
+  
+  .heading > h2 {
     font-weight: bold;
-    font-size: 18px;
-}
-.test-item {
-    margin: 10px;
-}
-.test-submit {
+    font-size: 24px;
+  }
+  
+  .test-item {
+    margin: 20px;
+    width: 30vw;
+  }
+  
+  .test-submit {
     display: flex;
     justify-content: space-between;
-}
+    margin-top: 20px;
+    flex-wrap: wrap;
+    margin-left: 90px;
+    margin-right: 90px;
+  }
+
+  .test-submit > button {
+    width: 40%; 
+  }
